--- a/django-api/nginx/default.conf
+++ b/django-api/nginx/default.conf
@@ -30,6 +30,7 @@ server {
 
     location / {
         proxy_pass http://api;
+        proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
         proxy_redirect off;
